# minecraft-portable-launcher

./: .gitignore  Cargo.toml  README.md  build.rs  minecraft-portable-launcher.sln
assets/: Minecraft.manifest
minecraft-portable-launcher/: minecraft-portable-launcher.rc  minecraft-portable-launcher.vcxproj  minecraft-portable-launcher.vcxproj.filters  resource.h
minecraft-portable-launcher/assets/C++/: main.cpp
src/: env.rs  helper.rs  launcher.rs  log.rs  main.rs
src/download/: download_list.rs  download_unique.rs  mod.rs
src/window/: mod.rs
