[package]
name = "Minecraft"
version = "1.0.1"
edition = "2021"
build = "build.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
md-5 = "0.10"
hex = "0.4"
base64 = "0.21"
lazy_static = "1.4"
futures-util = "0.3"

[build-dependencies]
winres = "0.1"

[target.'cfg(windows)'.dependencies]
nwg = { version = "^1.0.12", package = "native-windows-gui", default-features=false, features = ["progress-bar", "no-styling", "flexbox", "embed-resource", "frame"]}
nwd = { version="1.0.3", package="native-windows-derive" }
